RESOLVED FIXED181922
In WebKit2, make the MessagePortChannelRegistry live in the UI process
https://bugs.webkit.org/show_bug.cgi?id=181922
Summary In WebKit2, make the MessagePortChannelRegistry live in the UI process
Brady Eidson
Reported 2018-01-21 22:12:33 PST
In WebKit2, make the MessagePortChannelRegistry live in the UI process This is the final step towards https://bugs.webkit.org/show_bug.cgi?id=181178
Attachments
Patch (61.72 KB, patch)
2018-01-21 23:25 PST, Brady Eidson
no flags
Patch (61.84 KB, patch)
2018-01-22 08:02 PST, Brady Eidson
no flags
Archive of layout-test-results from ews106 for mac-sierra-wk2 (2.63 MB, application/zip)
2018-01-22 09:10 PST, EWS Watchlist
no flags
Patch (65.38 KB, patch)
2018-01-22 09:21 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2018-01-21 23:25:10 PST
Brady Eidson
Comment 2 2018-01-22 08:02:25 PST
EWS Watchlist
Comment 3 2018-01-22 09:10:07 PST
Comment on attachment 331926 [details] Patch Attachment 331926 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/6169989 New failing tests: media/video-main-content-autoplay.html
EWS Watchlist
Comment 4 2018-01-22 09:10:09 PST
Created attachment 331933 [details] Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Brady Eidson
Comment 5 2018-01-22 09:19:53 PST
(In reply to Build Bot from comment #4) > Created attachment 331933 [details] > Archive of layout-test-results from ews106 for mac-sierra-wk2 > > The attached test failures were seen while running run-webkit-tests on the > mac-wk2-ews. > Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6 (In reply to Build Bot from comment #3) > Comment on attachment 331926 [details] > Patch > > Attachment 331926 [details] did not pass mac-wk2-ews (mac-wk2): > Output: http://webkit-queues.webkit.org/results/6169989 > > New failing tests: > media/video-main-content-autoplay.html This seems to have nothing to do with this patch.
Brady Eidson
Comment 6 2018-01-22 09:21:55 PST
Brady Eidson
Comment 7 2018-01-22 09:29:27 PST
(In reply to Brady Eidson from comment #5) > (In reply to Build Bot from comment #4) > > Created attachment 331933 [details] > > Archive of layout-test-results from ews106 for mac-sierra-wk2 > > > > The attached test failures were seen while running run-webkit-tests on the > > mac-wk2-ews. > > Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6 > > (In reply to Build Bot from comment #3) > > Comment on attachment 331926 [details] > > Patch > > > > Attachment 331926 [details] did not pass mac-wk2-ews (mac-wk2): > > Output: http://webkit-queues.webkit.org/results/6169989 > > > > New failing tests: > > media/video-main-content-autoplay.html > > This seems to have nothing to do with this patch. Indeed, it's crashing on the bots right now too. https://build.webkit.org/results/Apple%20High%20Sierra%20Release%20WK2%20(Tests)/r227291%20(2414)/results.html
WebKit Commit Bot
Comment 8 2018-01-22 10:35:29 PST
Comment on attachment 331934 [details] Patch Clearing flags on attachment: 331934 Committed r227340: <https://trac.webkit.org/changeset/227340>
WebKit Commit Bot
Comment 9 2018-01-22 10:35:30 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2018-01-22 10:37:54 PST
Note You need to log in before you can comment on or make changes to this bug.